--- a/EsercitazioneControlloAccessi/wwwroot/Website/Index.html
+++ b/EsercitazioneControlloAccessi/wwwroot/Website/Index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina con Sidebar</title>
+    <title>MiaAzienda</title>
     <link rel="stylesheet" href="Assets/CSS/Stile.CSS">
 </head>
 <body>
     <div class="container">
         <!-- Sidebar -->
         <aside class="sidebar">
-            <h2>Sidebar</h2>
+            <h2>Azienda</h2>
             <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
-                <li><a href="#">Link 4</a></li>
+                <li><a href="#">Registrazione Utente</a></li>
+                <li><a href="#">Registrazione Ospite</a></li>
+                <li><a href="#">Registrazione Visita</a></li>
+                <li><a href="#">Registro Visite</a></li>
+                <li><a href="#">Gestione Visite</a></li>
             </ul>
         </aside>
 
