--- a/EsercitazioneControlloAccessi/wwwroot/Website/RegistrazioneUtenteRuolo.html
+++ b/EsercitazioneControlloAccessi/wwwroot/Website/RegistrazioneUtenteRuolo.html
@@ -7,16 +7,37 @@
         Registrazione Utente Ruolo
 </title>
 
-<style href="Assets/RegistrazioneUtenteR.css" rel="style"> </style>
+<link rel="stylesheet" href="Assets/RegistrazioneUtenteR.css" > 
 </head>
 
 <body>
+    <div class="header">
+        <ul>
+            <li><a href="#">Mainpage</a></li>
+            <li><a href="#">Logout</a></li>
+        </ul>
+    </div>
 
+    <div class="main">
+        <h1> Registrazione Utente</h1>
 
-<div class="main">
-    <h1> Registrazione Utente</h1>
-</div>
+        <label for="nome">NOME</label>
+        <select name="Dipendente" id="nome" placeholder="DIPENDENTE">
+            <option value="VOLVO">VOLVO</option>
+        </select><br>
+        <label for="nome">RUOLO</label>
+        <select name="ruolo" id="nome" placeholder="USERNAME"></select>
 
+        <div class="footholder">
+            <ul>
+                <li><a href="#">Pulisci</a></li>
+                <li><a href="#">Registra</a></li>
+            </ul>
+        </div>
+
+    </div>
+
+    
 
 
 </body>
